Fix overflow scroll problem in Safari

--- a/posts/post.css
+++ b/posts/post.css
@@ -47,8 +47,13 @@ pre {
   padding-left: 1em;
   border: 2px solid gainsboro;
   border-radius: 10px;
-  overflow: hidden;
-  overflow-x:auto;
+  overflow:auto;
+  display: block;
+}
+
+pre code {
+  overflow: auto;
+  word-wrap: normal;
 }
 
 
